[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/switch/switch.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/switch/on.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="switchArea" type="Area2D" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable" ]

[node name="switchSprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="switchCollider" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="switchSfx" type="AudioStreamPlayer" parent="." index="2"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_switchArea_body_entered"]


